--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -17,12 +17,39 @@
   height: 100px;
   background-color: #253141;
   padding: 0 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.header-name a{
+  font-size: 16px;
+  color: #fafafa;
+  text-decoration: none;
+}
+
+.create-room a{
+  font-size: 10px;
+  color: deepskyblue;
+  padding: 14px;
+  border: 1px solid lightblue;
+  text-decoration: none;
+}
+
+.rooms{
+  height: calc(100vh - 100px);
+  background-color: #2f3e51;
+  overflow: scroll;
+  padding: 0 20px;
 }
 
 .room{
-  height: calc(100vh - 100px);
-  background-color: #2f3e51;
-  padding: 0 20px;
+  padding: 20px 0 40px;
+}
+
+.room-name a{
+  color: white;
+  text-decoration: none;
 }
 
 .chat-header{
@@ -41,3 +68,6 @@
   background-color: #dddddd;
   padding: 20px 40px;
 }
+
+
+
